<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:transitionName="transition_register"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.register.SignUpActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/qc_dp_36"
        android:layout_height="@dimen/qc_dp_36"
        android:layout_marginStart="@dimen/qc_dp_20"
        android:layout_marginTop="@dimen/qc_dp_20"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent
"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back">


        <!-- Logo và tiêu đề -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4"
            android:fontFamily="sans-serif-medium"
            android:text="@string/name_app"
            android:includeFontPadding="false"
            android:textColor="@color/my_text_blue"
            android:textSize="@dimen/qc_sp_22"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/qc_dp_8"
            android:alpha="0.9"
            android:gravity="center"
            android:text="@string/text_start_health_journey"
            android:textColor="@color/text_blue_journey"
            android:textSize="@dimen/qc_sp_12"
            style="@style/TextView.JourneyTitle" />

        <ImageView
            android:layout_width="@dimen/qc_dp_120"
            android:layout_height="@dimen/qc_dp_120"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/img_2" />
        <TextView
            android:id="@+id/txt_error_input"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/qc_dp_24"
            android:textColor="@color/text_color_error"
            android:textSize="@dimen/qc_sp_8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="32dp"
            android:visibility="gone"
            android:text="@string/text_welcome"
            android:textColor="@android:color/black"
            android:textSize="@dimen/qc_sp_18"
            android:textStyle="bold" />

        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/white"
            android:textColorHint="@color/text_hint_color"
            app:startIconContentDescription="Email Icon"
            app:startIconDrawable="@drawable/ic_mail"
            app:hintEnabled="false"
            app:startIconTint="@color/color_icon_tint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_background_edt_input"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/qc_dp_18"
                android:paddingStart="@dimen/qc_dp_48"
                android:singleLine="true"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/qc_sp_10"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qc_dp_10"
            app:boxBackgroundColor="@android:color/white"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="Email Icon"
            android:textColorHint="@color/text_hint_color"
            app:startIconDrawable="@drawable/icons8_password"
            app:startIconTint="@color/color_icon_tint"
            app:hintEnabled="false"
            app:endIconTint="@color/color_icon_tint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_background_edt_input"
                android:hint="@string/hint_password"
                android:paddingStart="@dimen/qc_dp_48"
                android:inputType="textPassword"
                android:textColor="@color/text_color_black"
                tools:ignore="TextFields"
                android:padding="@dimen/qc_dp_18"
                android:textSize="@dimen/qc_sp_10" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/qc_dp_20"
            android:clickable="true"
            android:layout_marginTop="@dimen/qc_dp_2"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/text_forgot_password"
            android:textColor="@color/my_text_blue"
            android:textSize="@dimen/qc_sp_10"
            android:textStyle="bold" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qc_dp_54"
            android:layout_marginTop="@dimen/qc_dp_10"
            android:layout_marginBottom="@dimen/qc_dp_5"
            android:background="@drawable/bg_background_signin"
            android:text="@string/text_signin"
            android:textAllCaps="false"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/qc_sp_12"
            app:elevation="2dp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qc_dp_54"
            android:background="@android:color/transparent"
            android:text="@string/text_signup"
            android:textAllCaps="false"
            android:textColor="#424242"
            android:textSize="@dimen/qc_sp_12" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
