<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_faq"
    android:paddingStart="@dimen/qc_dp_20"
    android:paddingTop="@dimen/qc_dp_10"
    android:paddingBottom="@dimen/qc_dp_20"
    android:paddingEnd="@dimen/qc_dp_2"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/txt_faq"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_expanded_answer_faq"
        android:layout_marginEnd="@dimen/qc_dp_16"
        android:text="@string/faq_question_1"
        android:textColor="@color/text_color_white"
        android:textStyle="bold"
        android:textSize="@dimen/qc_sp_10"/>
    <TextView
        android:id="@+id/txt_faq_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_answer_1"
        android:textSize="@dimen/qc_sp_10"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txt_faq"
        android:layout_marginTop="@dimen/qc_dp_8"
        android:textColor="@color/text_color_info_attribute_user"/>

    <ImageView
        android:id="@+id/img_expanded_answer_faq"
        android:layout_width="@dimen/qc_dp_30"
        android:layout_height="@dimen/qc_dp_30"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_faq"
        app:layout_constraintBottom_toBottomOf="@id/txt_faq"/>

</androidx.constraintlayout.widget.ConstraintLayout>